bug squashed

--- a/src/components/MapComponents/MapPlacement.css
+++ b/src/components/MapComponents/MapPlacement.css
@@ -18,7 +18,7 @@ video {
   .layout-container {
     /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
     height: 100vh;
-    background-color:#fff;
+    
     width: 100%;
     display: flex;
     flex-direction: column;
